# IB_TP_SCCS_2026

./: .gitignore  IB_TP_SCCS_2026_EDA.Rmd  IB_TP_SCCS_2026_base.Rmd  README.md  SCCS_auditoría_para_Banco_Anfora.pptx  clasificador_tipo_fraude.ipynb  clustering_fraudes.ipynb  diccionario.md  modelos.ipynb  pyproject.toml  reentrenamiento_por_tipo_fraude.ipynb
datos/v6/: metricas_temporales.csv
datos/v6/clustering/: clustering_operaciones.parquet
datos/v6/modelos/: metricas_T0_validacion.json
