[project]
name = "taller"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn==1.8.0",
    "scikit-learn-extra>=0.3.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
